tests/NormalTests/paczka1/small_fuzzy/44322054.err
Error in line 2: A529 S20 90,5
Error in line 3: aIML A479 74,6
Error in line 1: JzA S20 74,5
Error in line 8: aIML S20 33,3
Error in line 15: N4WXBxh A529 1,6
